Addes images to lists

--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 
 *{
    
-    background-color: rgb(210, 225, 230);
+    background-color: white;
+    box-sizing: border-box;
 }
 
 h1{
@@ -12,9 +13,24 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: auto;
+    width: 0 auto;
 }
 
-ul li{
-    
+div{
+    border: 5px solid red;
+    text-align: center;
+
+}
+ul{
+    display: inline-flex;
+    text-align: center;
+    margin: 0;
+    list-style-type: none;
+}
+li{
+    margin: 10px;
+}
+.lasagna{
+    max-width: 250px;
+    height: 180px;
 }
